# pymaneuvering

./: README.md  index.html  jest.config.js  package-lock.json  package.json  pyproject.toml  showcase.py  tsconfig.json
.github/workflows/: release.yml
javascript/: package-lock.json  package.json
javascript/src/: index.js  vessel.js
javascript/src/abkowitz/: dynamics.js
javascript/src/mmg/: calibrated_vessels.js  dynamics.js  propeller.js  rudder.js
javascript/src/utils/: common.js
javascript/tests/: abkowitz.test.js  mmg.test.js  setup.test.js  testUtils.js  utils.test.js
lib/: boat-controller.ts
lib/jsmaneuvering/: README.md  package.json  showcase.js
lib/jsmaneuvering/src/: index.js  vessel.js
lib/jsmaneuvering/src/abkowitz/: calibrated_vessels.js  dynamics.js
lib/jsmaneuvering/src/mmg/: dynamics.js  hull.js  propeller.js  rudder.js
lib/jsmaneuvering/tests/: calibration.test.js  mmg.test.js
lib/pymaneuvering/: .gitignore
lib/pymaneuvering/tests/: test_mmg_dynamics.py  test_utils.py
python/: pyproject.toml
python/src/pymaneuvering/utils/: common.py  maneuvers.py
python/tests/: test_abkowitz_dynamics.py  test_calibration.py
src/: keyboard-axis-controller.ts  main.ts  rendering-engine.ts  style.css  zoom.ts
src/pymaneuvering/: __init__.py
src/pymaneuvering/abkowitz/: calibrated_vessels.py  dynamics.py
src/pymaneuvering/mmg/: dynamics.py
src/pymaneuvering/utils/: example.py
src/vessels/: index.ts  j105.ts  navy-44.ts  tanker.ts  types.ts
tests/: boat-controller.test.ts  keyboard-axis-controller.test.ts  zoom.test.ts
(+1 files in other folders)
