[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaneuvering"
version = "2.0.0"
authors = [
    { name = "Niklas Paulig" },
]
description = "A Python implementation of MMG and Abkowitz-type maneuvering models for inland and ocean vessels."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19",
    "scipy",
    "matplotlib>=3.5.3",
]

[project.urls]
"Homepage" = "https://github.com/nikpau/mmgdynamics"

[tool.setuptools.packages.find]
where = ["src"]
